--- a/index.html
+++ b/index.html
@@ -7,71 +7,80 @@
         <meta name="description" content="Portfolio Gabriela Ignatiuka, strona zawiera informację na temat moich umiętności, osiągnięć oraz wykonanych zleceń">
         <meta name="keywords" content="Gabriel, Ignatiuk, frontend, front, end, develeoper, development, HTML5, CSS3, JavaScript, Angular, React, SASS, Atom, Mac">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <link href="./style1080.css" rel="stylesheet">
-        <link href="./style720.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
+        <!-- <link href="./css/style1080.css" rel="stylesheet"> -->
+        <!-- <link href="./style720.css" rel="stylesheet"> -->
+        <link href="./css/normalize.css" rel="stylesheet" />
+        <link href="./css/style.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/dae1dff95d.js"></script>
-        <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+        <!-- <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script> -->
     </head>
     <body>
-        <header id="top">
+      <nav class="navigation-menu">
+          <ul class="navigation-list">
+              <li><a href="#top">Do góry</a></li>
+              <li><a href="#about">O mnie</a></li>
+              <li><a href="#skills">Umiejętności</a></li>
+              <li><a href="#works">Portfolio</a></li>
+              <li><a href="#contact">Kontakt</a></li>
+          </ul>
+      </nav>
+        <header class="header" id="top">
           <div id="particles-js"></div>
-            <nav>
-                <ul>
-                    <li><a href="#top">Do góry</a></li>
-                    <li><a href="#about">O mnie</a></li>
-                    <li><a href="#experience">Umiejętności</a></li>
-                    <li><a href="#works">Portfolio</a></li>
-                    <li><a href="#contact">Kontakt</a></li>
-                </ul>
-            </nav>
-            <h1 class="title">Gabriel Ignatiuk</h1>
-            <h2 class="subtitle"><span class="space">#Front End Developer</span><span class="space">#Czysty kod</span><span class="space">#Muzyka</span></h2>
+          <div class="header-author">
+            <h1 class="header-title">Gabriel Ignatiuk</h1>
+            <h2 class="header-subtitle"><span class="space">#Front End Developer</span><span class="space">#Czysty kod</span><span class="space">#Muzyka</span></h2>
+            </div>
         </header>
         <section class="about" id="about">
-            <img src="./src/images/award.png">
+            <img src="./img/statue.png">
             <h3>Cześć, nazywam się Gabriel Ignatiuk i jestem Front End Developerem z Warszawy.</h3>
             <p>Przygodę z tworzeniem stron internetowych rozpocząłem pod koniec piątej klasy podstawówki. Trwała ona około trzy lata po czym, jak każdy nastolatek, moje zainteresowania uległy zmianie. <span class="rwd-line">Nabyte umiejętności przydały mi się podczas tworzenia stron internetowych na zajęcia w szkole średniej, czy w tworzeniu strony firmowej dla przyjaciela opartej o framework Bootstrap 3.</span></p>
             <p>Po dwóch latach przerwy wznowiłem działalność w temacie tworzenia stron internetowych. Początkowo przypominałem sobie nabyte wiadomości na temat HTML i CSS. Dodatkowo zagłębiłem się w HTML5 oraz CSS3. <span class="rwd-line">Kolejnym językiem, którego chciałbym się nauczyć jest JavaScript. Ponadto chciałbym korzystać z preprocesora SASS, a także SCSS.</span></p>
-            <a href="#contact"><button>Napisz do mnie</button></a>
+            <button class="btn-mail"><a href="#contact">Napisz do mnie</a></button>
         </section>
-        <section id="experience" class="experience">
+        <section class="skills" id="skills">
             <h2>Umiejętności</h2>
             <!-- I KNOW how to use -->
             <h3>Poznałem i wykorzystuję:</h3>
-            <a class="tooltips" href="#"><img src="./src/images/icons/html5.png" alt="HTML5"><span>Dobrze</span></a>
-            <a class="tooltips" href="#"><img src="./src/images/icons/css3.png" alt="CSS3"><span>Dobrze</span></a>
-            <a class="tooltips" href="#"><img src="./src/images/icons/bootstrap.png" alt="Bootstrap"><span>Dobrze</span></a>
-            <a class="tooltips" href="#"><img src="./src/images/icons/git.png" alt="GitHub"><span>Średnio</span></a>
+            <ul class="skills-list">
+            <li><a class="tooltips" href="#"><img src="./img/icons/html5.png" alt="HTML5" class="responsive-img"><span class="tooltip-text">Dobrze</span></a></li>
+            <li><a class="tooltips" href="#"><img src="./img/icons/css3.png" alt="CSS3" class="responsive-img"><span class="tooltip-text">Dobrze</span></a></li>
+            <li><a class="tooltips" href="#"><img src="./img/icons/bootstrap.png" alt="Bootstrap" class="responsive-img"><span class="tooltip-text">Dobrze</span></a></li>
+            <li><a class="tooltips" href="#"><img src="./img/icons/git.png" alt="GitHub" class="responsive-img"><span class="tooltip-text">Średnio</span></a></li>
+            </ul>
             <!-- TOOLS -->
             <h3>Pracuję korzystając z:</h3>
-            <a class="tooltips" href="#"><img src="./src/images/icons/atom.png" alt="Atom"><span>GitHub Atom</span></a>
-            <a class="tooltips" href="#"><img src="./src/images/icons/ps.png" alt="Photoshop"><span>Photoshop CC</span></a>
-            <a class="tooltips" href="#"><img src="./src/images/icons/chrome.png" alt="Google Chrome Dev"><span>Chrome Dev</span></a>
-            <a class="tooltips" href="#"><img src="./src/images/icons/mac.png" alt="MacOS"><span>Mac OS</span></a>
-            <a class="tooltips" href="#"><img src="./src/images/icons/pc.png" alt="PC"><span>PC</span></a>
+            <ul class="skills-list">
+            <li><a class="tooltips" href="#"><img src="./img/icons/atom.png" alt="Atom" class="responsive-img"><span class="tooltip-text">GitHub Atom</span></a></li>
+            <li><a class="tooltips" href="#"><img src="./img/icons/ps.png" alt="Photoshop" class="responsive-img"><span class="tooltip-text">Photoshop CC</span></a></li>
+            <li><a class="tooltips" href="#"><img src="./img/icons/chrome.png" alt="Google Chrome Dev" class="responsive-img"><span class="tooltip-text">Chrome Dev</span></a></li>
+            <li><a class="tooltips" href="#"><img src="./img/icons/mac.png" alt="MacOS" class="responsive-img"><span class="tooltip-text">Mac OS</span></a></li>
+            <li><a class="tooltips" href="#"><img src="./img/icons/pc.png" alt="PC" class="responsive-img"><span class="tooltip-text">PC</span></a></li>
+            </ul>
             <!-- FOR FUTURE -->
             <h3>Chcę opanować:</h3>
-            <a class="tooltips" href="#"><img src="./src/images/icons/js.png" alt="JavaScript"><span>JavaScript</span></a>
-            <a class="tooltips" href="#"><img src="./src/images/icons/jquery.png" alt="jQuery"><span>jQuery</span></a>
-            <a class="tooltips" href="#"><img src="./src/images/icons/sass.png" alt="Sass"><span>Sass</span></a>
-            <a class="tooltips" href="#"><img src="./src/images/icons/node.png" alt="Node"><span>Node.js</span></a>
-            <a class="tooltips" href="#"><img src="./src/images/icons/angular.png" alt="Angular"><span>Angular</span></a>
-            <a class="tooltips" href="#"><img src="./src/images/icons/react.png" alt="React"><span>React</span></a>
-            <a class="tooltips" href="#"><img src="./src/images/icons/bower.png" alt="Bower"><span>Bower</span></a>
-            <a class="tooltips" href="#"><img src="./src/images/icons/gulp.png" alt="Gulp"><span>Gulp</span></a>
+            <ul class="skills-list">
+            <li><a class="tooltips" href="#"><img src="./img/icons/js.png" alt="JavaScript" class="responsive-img"><span class="tooltip-text">JavaScript</span></a></li>
+            <li><a class="tooltips" href="#"><img src="./img/icons/jquery.png" alt="jQuery" class="responsive-img"><span class="tooltip-text">jQuery</span></a></li>
+            <li><a class="tooltips" href="#"><img src="./img/icons/sass.png" alt="Sass" class="responsive-img"><span class="tooltip-text">Sass</span></a></li>
+            <li><a class="tooltips" href="#"><img src="./img/icons/node.png" alt="Node" class="responsive-img"><span class="tooltip-text">Node.js</span></a></li>
+            <li><a class="tooltips" href="#"><img src="./img/icons/angular.png" alt="Angular" class="responsive-img"><span class="tooltip-text">Angular</span></a></li>
+            <li><a class="tooltips" href="#"><img src="./img/icons/react.png" alt="React" class="responsive-img"><span class="tooltip-text">React</span></a></li>
+            <li><a class="tooltips" href="#"><img src="./img/icons/bower.png" alt="Bower" class="responsive-img"><span class="tooltip-text">Bower</span></a></li>
+            <li><a class="tooltips" href="#"><img src="./img/icons/gulp.png" alt="Gulp" class="responsive-img"><span class="tooltip-text">Gulp</span></a></li>
+            </ul>
         </section>
         <section id="works" class="works">
-            <div class="works-container">
+            <div class="works-container hidden">
                 <h2>Projekty wykonane</h2>
                 <!-- GALLERY IMAGE DIMENSIONS 700X420 -->
-                <a href="https://github.com/malikowy/MRR" target="_blank" title="Strona dla firmy MRR" class="gallery rotate"><img src="./src/images/projects/mrr.png" alt="MRR page view" /></a>
-                <a href="https://github.com/malikowy/portfolio-page" target="_blank" title="Moja pierwsza strona portfolio" class="gallery rotate"><img src="./src/images/projects/portfolio.png" alt="My first portfolio page" /></a>
-                <a href="#" title="Lorem ipsum" class="gallery rotate"><img src="./src/images/7.jpg" alt="" /></a>
-                <a href="#" title="Lorem ipsum" class="gallery rotate"><img src="./src/images/5.jpg" alt="" /></a>
-                <a href="#" title="Lorem ipsum" class="gallery rotate"><img src="./src/images/6.jpg" alt="" /></a>
-                <a href="#" title="Lorem ipsum" class="gallery rotate"><img src="./src/images/7.jpg" alt="" /></a>
+                <a href="https://github.com/malikowy/MRR" target="_blank" title="Strona dla firmy MRR" class="gallery rotate"><img src="./img/projects/mrr.png" alt="MRR page view" /></a>
+                <a href="https://github.com/malikowy/portfolio-page" target="_blank" title="Moja pierwsza strona portfolio" class="gallery rotate"><img src="./img/projects/portfolio.png" alt="My first portfolio page" /></a>
+                <a href="#" title="Lorem ipsum" class="gallery rotate"><img src="./img/7.jpg" alt="" /></a>
+                <a href="#" title="Lorem ipsum" class="gallery rotate"><img src="./img/5.jpg" alt="" /></a>
+                <a href="#" title="Lorem ipsum" class="gallery rotate"><img src="./img/6.jpg" alt="" /></a>
+                <a href="#" title="Lorem ipsum" class="gallery rotate"><img src="./img/7.jpg" alt="" /></a>
             </div>
         </section>
         <section class="contact" id="contact">
@@ -149,8 +158,8 @@
         });
         </script>
         <!-- PARTICLES SCRIPT -->
-        <script src="./src/js/particles.min.js"></script>
-        <script src="./src/js/app.js"></script>
+        <script src="./js/particles.min.js"></script>
+        <script src="./js/app.js"></script>
     </body>
 
 </html>
