--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link href="./css/normalize.css" rel="stylesheet" />
         <link href="./css/style.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/dae1dff95d.js"></script>
-        <!-- <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script> -->
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     </head>
     <body>
       <nav class="navigation-menu">
