vh i vw for dimensions and font-size

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div id="particles-js"></div>
           <div class="header-author">
             <h1 class="header-title">Gabriel Ignatiuk</h1>
-            <h2 class="header-subtitle"><span class="space">#Front End Developer</span><span class="space">#Czysty kod</span><span class="space">#Muzyka</span></h2>
+            <h2 class="header-subtitle">#Front End Developer</h2>
             </div>
         </header>
         <section class="about" id="about">
