--- a/index.html
+++ b/index.html
@@ -14,31 +14,41 @@
         <link href="./css/style.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/dae1dff95d.js"></script>
         <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+        <!--  -->
+        <!-- drawer.css -->
+<link rel="stylesheet" href="./css/drawer.css">
+<!-- jquery & iScroll -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.1.3/iscroll.min.js"></script>
+<!-- drawer.js -->
+<script src="./js/drawer.min.js"></script>
     </head>
-    <body>
-      <nav class="navigation-menu">
-          <ul class="navigation-list">
-              <li><a href="#top">Do góry</a></li>
-              <li><a href="#about">O mnie</a></li>
-              <li><a href="#skills">Umiejętności</a></li>
-              <li><a href="#works">Portfolio</a></li>
-              <li><a href="#contact">Kontakt</a></li>
-              <button type="button" title="Open menu" aria-level="navigation menu">
-                <div id="mobile-icon">
-                <span></span>
-                <span></span>
-                <span></span>
-                </div>
-              </button>
-          </ul>
-      </nav>
-        <header class="header" id="top">
+    <body class="drawer drawer--right">
+<!--  -->
+<header role="banner">
+  <button type="button" class="drawer-toggle drawer-hamburger">
+    <span class="sr-only">toggle navigation</span>
+    <span class="drawer-hamburger-icon"></span>
+  </button>
+  <nav class="drawer-nav" role="navigation">
+    <ul class="drawer-menu">
+      <li><a class="drawer-brand" href="#top">Menu / Do góry</a></li>
+      <li><a class="drawer-menu-item" href="#about">O mnie</a></li>
+      <li><a class="drawer-menu-item" href="#skills">Umiejętności</a></li>
+      <li><a class="drawer-menu-item" href="#works">Projekty</a></li>
+      <li><a class="drawer-menu-item" href="#contact">Kontakt</a></li>
+    </ul>
+  </nav>
+</header>
+      <!--  -->
+      <main class="main">
+        <section class="header" id="top">
           <div id="particles-js"></div>
           <div class="header-author">
             <h1 class="header-title">Gabriel&nbsp;Ignatiuk</h1>
             <h2 class="header-subtitle">#Front End Developer</h2>
             </div>
-        </header>
+        </section>
         <section class="about" id="about">
             <img src="./img/statue.png">
             <h3>Cześć, nazywam się Gabriel Ignatiuk i jestem Front End Developerem z Warszawy.</h3>
@@ -130,6 +140,7 @@
             <a href="http://twitter.com/malikowy"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
             <p>Copyright &copy; Gabriel Ignatiuk. All rights reserved.</p>
         </footer>
+        </main>
         <!-- GOOGLE MAPS -->
         <script>
             function initMap() {
@@ -166,12 +177,10 @@
         </script>
         <!--  -->
         <script>
-        $(document).ready(function(){
-$('#mobile-icon').click(function(){
-  $(this).toggleClass('open');
+        $(document).ready(function() {
+  $('.drawer').drawer();
 });
-});
-        </script>
+</script>
         <!-- PARTICLES SCRIPT -->
         <script src="./js/particles.min.js"></script>
         <script src="./js/app.js"></script>
