--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                       <span class="drawer-hamburger-icon"></span>
                     </button>
                 </div>
-                <nav class="drawer-nav" role="navigation">
+                <nav class="drawer-nav" role="navigation" id="menu-center">
                     <ul class="drawer-menu ">
                         <li>
                             <a class="drawer-menu-item" href="#about">#O mnie</a>
@@ -269,6 +269,7 @@
                 $('.drawer').drawer();
             });
         </script>
+        <!-- menu active  -->
         <!-- PARTICLES SCRIPT -->
         <script src="./js/particles.min.js"></script>
         <script src="./js/app.js"></script>
