some CSS styling = RWD

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                 </div>
             </section>
             <section class="about" id="about">
-                <img src="./img/statue.png">
-                <h3>Cześć, nazywam się Gabriel Ignatiuk i jestem Junior Front End Developerem z Warszawy.</h3>
+                <img src="./img/statue.png" alt="About me poster">
+                <h3>Cześć,<br>nazywam się Gabriel Ignatiuk i jestem Junior Front End Developerem z&nbsp;Warszawy.</h3>
                 <p>Przygodę z tworzeniem stron internetowych rozpocząłem pod koniec piątej klasy podstawówki. Trwała ona około trzy lata po czym, jak każdy nastolatek, moje zainteresowania uległy zmianie. Nabyte umiejętności przydały mi się podczas tworzenia
                     stron internetowych na zajęcia w szkole średniej, czy w tworzeniu strony firmowej dla przyjaciela opartej o framework Bootstrap 3.
                 </p>
                 <p>Po dwóch latach przerwy wznowiłem działalność w temacie tworzenia stron internetowych. Początkowo przypominałem sobie nabyte wiadomości na temat HTML i CSS. Dodatkowo zagłębiłem się w HTML5 oraz CSS3. Kolejnym językiem, którego chciałbym
-                    się nauczyć jest JavaScript. Ponadto chciałbym korzystać z preprocesora SASS, a także SCSS.
+                    się nauczyć jest JavaScript. Ponadto chciałbym korzystać z&nbsp;preprocesora SASS, a także SCSS.
                 </p>
                 <button class="btn-mail">
                     <a href="#contact">#Kontakt</a>
