--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- <link href="./css/style1080.css" rel="stylesheet"> -->
         <!-- <link href="./style720.css" rel="stylesheet"> -->
         <link href="./css/normalize.css" rel="stylesheet" />
-        <link href="./css/style.css" rel="stylesheet" />
+        <link href="./css/css.css" rel="stylesheet" />
         <!-- Social icons -->
         <script src="https://use.fontawesome.com/dae1dff95d.js"></script>
         <!-- jQuery -->
@@ -29,7 +29,6 @@
         <header class="drawer-navbar drawer-navbar--fixed" role="banner">
             <div class="drawer-container">
                 <div class="drawer-navbar-header">
-                    <a class="drawer-brand scrollTo" href="#top">#Do góry</a>
                     <button type="button" class="drawer-toggle drawer-hamburger">
                       <span class="sr-only">toggle navigation</span>
                       <span class="drawer-hamburger-icon"></span>
@@ -67,8 +66,8 @@
                 <p>Przygodę z tworzeniem stron internetowych rozpocząłem pod koniec piątej klasy podstawówki. Trwała ona około trzy lata po czym, jak każdy nastolatek, moje zainteresowania uległy zmianie. Nabyte umiejętności przydały mi się podczas tworzenia
                     stron internetowych na zajęcia w szkole średniej, czy w tworzeniu strony firmowej dla przyjaciela opartej o framework Bootstrap 3.
                 </p>
-                <p>Po dwóch latach przerwy wznowiłem działalność w temacie tworzenia stron internetowych. Początkowo przypominałem sobie nabyte wiadomości na temat HTML i CSS. Dodatkowo zagłębiłem się w HTML5 oraz CSS3. Kolejnym językiem, którego chciałbym
-                    się nauczyć jest JavaScript. Ponadto chciałbym korzystać z&nbsp;preprocesora SASS, a także SCSS.
+                <p>Po dwóch latach przerwy wznowiłem działalność w temacie tworzenia stron internetowych. Początkowo przypominałem sobie nabyte wiadomości na temat HTML i CSS. Dodatkowo zagłębiłem się w HTML5 i CSS3 oraz zacząłem korzystać z preprocesora
+                    SCSS. Kolejnym językiem, którego chciałbym się nauczyć jest JavaScript.
                 </p>
                 <button class="btn-mail">
                     <a href="#contact">#Kontakt</a>
@@ -86,6 +85,11 @@
                     </li>
                     <li>
                         <a class="tooltips" href="#"><img src="./img/icons/css3.png" alt="CSS3" class="responsive-img">
+                            <span class="tooltip-text">Dobrze</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="tooltips" href="#"><img src="./img/icons/sass.png" alt="Sass" class="responsive-img">
                             <span class="tooltip-text">Dobrze</span>
                         </a>
                     </li>
@@ -143,11 +147,6 @@
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips" href="#"><img src="./img/icons/sass.png" alt="Sass" class="responsive-img">
-                            <span class="tooltip-text">Sass</span>
-                        </a>
-                    </li>
-                    <li>
                         <a class="tooltips" href="#"><img src="./img/icons/node.png" alt="Node" class="responsive-img">
                             <span class="tooltip-text">Node.js</span>
                         </a>
@@ -159,7 +158,7 @@
                     </li>
                     <li>
                         <a class="tooltips" href="#"><img src="./img/icons/react.png" alt="React" class="responsive-img">
-                            <span class="tooltip-text">React</span>
+                            <span class="tooltip-text">React.js</span>
                         </a>
                     </li>
                     <li>
@@ -178,61 +177,55 @@
                 <div class="works-container hidden">
                     <h2>#Projekty wykonane</h2>
                     <!-- GALLERY IMAGE DIMENSIONS 700X420 -->
-                    <a href="https://github.com/malikowy/MRR" target="_blank" title="Strona dla firmy MRR" class="gallery rotate"><img src="./img/projects/mrr.png" alt="MRR page view" /></a>
-                    <a href="https://github.com/malikowy/portfolio-page" target="_blank" title="Moja pierwsza strona portfolio" class="gallery rotate"><img src="./img/projects/portfolio.png" alt="My first portfolio page" /></a>
+                    <a href="https://github.com/malikowy/MRR" target="_blank" title="Strona dla firmy MRR" class="gallery rotate"><img src="./img/projects/mrr.png" alt="MRR page view"></a>
+                    <a href="https://github.com/malikowy/portfolio-page" target="_blank" title="Moja pierwsza strona portfolio" class="gallery rotate"><img src="./img/projects/portfolio.png" alt="My first portfolio page"></a>
                     <a href="#" title="Lorem ipsum" class="gallery rotate"><img src="./img/7.jpg" alt="" /></a>
                     <a href="#" title="Lorem ipsum" class="gallery rotate"><img src="./img/5.jpg" alt="" /></a>
                     <a href="#" title="Lorem ipsum" class="gallery rotate"><img src="./img/6.jpg" alt="" /></a>
                     <a href="#" title="Lorem ipsum" class="gallery rotate"><img src="./img/7.jpg" alt="" /></a>
                 </div>
             </section>
-            <section class="contact" id="contact">
+            <footer class="footer" id="contact">
                 <div class="contact-list">
-                    <div class="contact-data">
-                        <h2>DANE KONTAKTOWE</h2>
-                        <address class="vcard">
+                    <h2>#DANE KONTAKTOWE</h2>
+                    <address class=contact-data>
                             <p>Gabriel Ignatiuk</p>
-                            <p>Wiosenna 27b</p>
-                            <p>05-092 Łomianki</p>
-                            <p>mazowsze, Polska</p>
                             <p>Telefon:
-                                <span class="tel">600144708</span>
+                                <a href="tel:+48600144708">600144708</a>
                             </p>
                             <p>Email:
                                 <a class="email" href="mailto:gabriel.ignatiuk@gmail.com">gabriel.ignatiuk@gmail.com</a>
                             </p>
-                        </address>
+                    </address>
+                    <div class="contact-icons">
+                        <ul>
+                            <li>
+                                <a href="https://www.linkedin.com/in/gabrielignatiuk" aria-label="LinkedIn"><i class="fa faborder fa-linkedin-square fa-2x" aria-hidden="true"></i>
+                              </a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/malikowy" aria-label="GitHub"><i class="fa faborder fa-github fa-2x" aria-hidden="true"></i>
+                              </a>
+                            </li>
+                            <li>
+                                <a href="http://stackoverflow.com/users/4749832/malikowy" aria-label="Stack overflow"><i class="fa faborder fa-stack-overflow fa-2x" aria-hidden="true"></i>
+                              </a>
+                            </li>
+                            <li>
+                                <a href="http://facebook.com/gabrielignatiuk" aria-label="Facebook"><i class="fa faborder fa-facebook-square fa-2x" aria-hidden="true"></i>
+                              </a>
+                            </li>
+                            <li>
+                                <a href="https://plus.google.com/102438188261981760132" aria-label="Google+"><i class="fa faborder fa-google-plus-square fa-2x" aria-hidden="true"></i>
+                              </a>
+                            </li>
+                            <li>
+                                <a href="http://twitter.com/malikowy" aria-label="Twitter"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+                              </a>
+                            </li>
+                        </ul>
                     </div>
-                </div>
-            </section>
-            <footer>
-                <ul>
-                    <li>
-                        <a href="https://www.linkedin.com/in/gabrielignatiuk" aria-label="LinkedIn"><i class="fa faborder fa-linkedin-square fa-2x" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/malikowy" aria-label="GitHub"><i class="fa faborder fa-github fa-2x" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://stackoverflow.com/users/4749832/malikowy" aria-label="Stack overflow"><i class="fa faborder fa-stack-overflow fa-2x" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://facebook.com/gabrielignatiuk" aria-label="Facebook"><i class="fa faborder fa-facebook-square fa-2x" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/102438188261981760132" aria-label="Google+"><i class="fa faborder fa-google-plus-square fa-2x" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://twitter.com/malikowy" aria-label="Twitter"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                </ul>
-                <p>Copyright &copy; Gabriel Ignatiuk. All rights reserved.</p>
+                    <p class="copyrights">Strona Portfolio - Gabriel Ignatiuk, grudzień 2016</p>
             </footer>
         </main>
         <!-- SMOOTH SCROLL -->
@@ -266,7 +259,5 @@
         <script src="./js/particles.min.js"></script>
         <script src="./js/app.js"></script>
     </body>
-
-</html>
 
 </html>
