some minor mobile fixes

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                 <div id="particles-js"></div>
                 <div class="header-author">
                     <h1 class="header-title">Gabriel&nbsp;Ignatiuk</h1>
-                    <h2 class="header-subtitle">#Junior Front End Developer</h2>
+                    <h2 class="header-subtitle">#Junior Front-End Developer</h2>
                 </div>
             </section>
             <section class="about" id="about">
                 <img src="./img/statue.png" alt="About me poster">
-                <h3>Cześć,<br>nazywam się Gabriel Ignatiuk i jestem Junior Front End Developerem z&nbsp;Warszawy.</h3>
+                <h3>Cześć,<br>nazywam się Gabriel Ignatiuk i jestem Junior Front-End Developerem z&nbsp;Warszawy.</h3>
                 <p>Przygodę z tworzeniem stron internetowych rozpocząłem pod koniec piątej klasy podstawówki. Trwała ona około trzy lata po czym, jak każdy nastolatek, moje zainteresowania uległy zmianie. Nabyte umiejętności przydały mi się podczas tworzenia
                     stron internetowych na zajęcia w szkole średniej, czy w tworzeniu strony firmowej dla przyjaciela opartej o framework Bootstrap 3.
                 </p>
@@ -79,27 +79,27 @@
                 <h3>#Poznałem i wykorzystuję:</h3>
                 <ul class="skills-list">
                     <li>
-                        <a class="tooltips" href="#"><img src="./img/icons/html5.png" alt="HTML5" class="responsive-img">
+                        <a class="tooltips"><img src="./img/icons/html5.png" alt="HTML5" class="responsive-img">
                             <span class="tooltip-text">Dobrze</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips" href="#"><img src="./img/icons/css3.png" alt="CSS3" class="responsive-img">
+                        <a class="tooltips"><img src="./img/icons/css3.png" alt="CSS3" class="responsive-img">
                             <span class="tooltip-text">Dobrze</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips" href="#"><img src="./img/icons/sass.png" alt="Sass" class="responsive-img">
+                        <a class="tooltips"><img src="./img/icons/sass.png" alt="Sass" class="responsive-img">
                             <span class="tooltip-text">Dobrze</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips" href="#"><img src="./img/icons/bootstrap.png" alt="Bootstrap" class="responsive-img">
+                        <a class="tooltips"><img src="./img/icons/bootstrap.png" alt="Bootstrap" class="responsive-img">
                             <span class="tooltip-text">Dobrze</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips" href="#"><img src="./img/icons/git.png" alt="GitHub" class="responsive-img">
+                        <a class="tooltips"><img src="./img/icons/git.png" alt="GitHub" class="responsive-img">
                             <span class="tooltip-text">Średnio</span>
                         </a>
                     </li>
@@ -108,27 +108,27 @@
                 <h3>#Pracuję korzystając z:</h3>
                 <ul class="skills-list">
                     <li>
-                        <a class="tooltips" href="#"><img src="./img/icons/atom.png" alt="Atom" class="responsive-img">
+                        <a class="tooltips"><img src="./img/icons/atom.png" alt="Atom" class="responsive-img">
                             <span class="tooltip-text">GitHub Atom</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips" href="#"><img src="./img/icons/ps.png" alt="Photoshop" class="responsive-img">
+                        <a class="tooltips"><img src="./img/icons/ps.png" alt="Photoshop" class="responsive-img">
                             <span class="tooltip-text">Photoshop CC</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips" href="#"><img src="./img/icons/chrome.png" alt="Google Chrome Dev" class="responsive-img">
+                        <a class="tooltips"><img src="./img/icons/chrome.png" alt="Google Chrome Dev" class="responsive-img">
                             <span class="tooltip-text">Chrome Dev</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips" href="#"><img src="./img/icons/mac.png" alt="MacOS" class="responsive-img">
+                        <a class="tooltips"><img src="./img/icons/mac.png" alt="MacOS" class="responsive-img">
                             <span class="tooltip-text">Mac OS</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips" href="#"><img src="./img/icons/pc.png" alt="PC" class="responsive-img">
+                        <a class="tooltips"><img src="./img/icons/pc.png" alt="PC" class="responsive-img">
                             <span class="tooltip-text">PC</span>
                         </a>
                     </li>
@@ -137,37 +137,37 @@
                 <h3>#Chcę opanować:</h3>
                 <ul class="skills-list">
                     <li>
-                        <a class="tooltips" href="#"><img src="./img/icons/js.png" alt="JavaScript" class="responsive-img">
+                        <a class="tooltips"><img src="./img/icons/js.png" alt="JavaScript" class="responsive-img">
                             <span class="tooltip-text">JavaScript</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips" href="#"><img src="./img/icons/jquery.png" alt="jQuery" class="responsive-img">
+                        <a class="tooltips"><img src="./img/icons/jquery.png" alt="jQuery" class="responsive-img">
                             <span class="tooltip-text">jQuery</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips" href="#"><img src="./img/icons/node.png" alt="Node" class="responsive-img">
+                        <a class="tooltips"><img src="./img/icons/node.png" alt="Node" class="responsive-img">
                             <span class="tooltip-text">Node.js</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips" href="#"><img src="./img/icons/angular.png" alt="Angular" class="responsive-img">
+                        <a class="tooltips"><img src="./img/icons/angular.png" alt="Angular" class="responsive-img">
                             <span class="tooltip-text">Angular</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips" href="#"><img src="./img/icons/react.png" alt="React" class="responsive-img">
+                        <a class="tooltips"><img src="./img/icons/react.png" alt="React" class="responsive-img">
                             <span class="tooltip-text">React.js</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips" href="#"><img src="./img/icons/bower.png" alt="Bower" class="responsive-img">
+                        <a class="tooltips"><img src="./img/icons/bower.png" alt="Bower" class="responsive-img">
                             <span class="tooltip-text">Bower</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips" href="#"><img src="./img/icons/gulp.png" alt="Gulp" class="responsive-img">
+                        <a class="tooltips"><img src="./img/icons/gulp.png" alt="Gulp" class="responsive-img">
                             <span class="tooltip-text">Gulp</span>
                         </a>
                     </li>
@@ -225,7 +225,8 @@
                             </li>
                         </ul>
                     </div>
-                    <p class="copyrights">Strona Portfolio - Gabriel Ignatiuk, grudzień 2016</p>
+                    <p class="copyrights">Portfolio - Gabriel Ignatiuk</p>
+                    <p class="last-update">Ostatnia aktualizacja: grudzień 2016</p>
             </footer>
         </main>
         <!-- SMOOTH SCROLL -->
