--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <section class="header">
                 <div id="particles-js"></div>
                 <div class="header-author">
-                    <h1 class="header-title">Gabriel&nbsp;Ignatiuk</h1>
-                    <h2 class="header-subtitle">#Junior Front-End Developer</h2>
+                    <h1 class="header-author__title">Gabriel&nbsp;Ignatiuk</h1>
+                    <h2 class="header-author__subtitle">#Junior Front-End Developer</h2>
                 </div>
             </section>
             <section class="about" id="about">
@@ -79,28 +79,28 @@
                 <h3>#Poznałem i wykorzystuję:</h3>
                 <ul class="skills-list">
                     <li>
-                        <a class="tooltips"><img src="./img/icons/html5.png" alt="HTML5" class="responsive-img">
-                            <span class="tooltip-text">Dobrze</span>
+                        <a class="tooltips"><img src="./img/icons/html5.png" alt="HTML5" class="skills-list__img responsive-img">
+                            <span class="skills-list__tooltip">Dobrze</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/css3.png" alt="CSS3" class="responsive-img">
-                            <span class="tooltip-text">Dobrze</span>
+                        <a class="tooltips"><img src="./img/icons/css3.png" alt="CSS3" class="skills-list__img">
+                            <span class="skills-list__tooltip">Dobrze</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/sass.png" alt="Sass" class="responsive-img">
-                            <span class="tooltip-text">Dobrze</span>
+                        <a class="tooltips"><img src="./img/icons/sass.png" alt="Sass" class="skills-list__img">
+                            <span class="skills-list__tooltip">Dobrze</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/bootstrap.png" alt="Bootstrap" class="responsive-img">
-                            <span class="tooltip-text">Dobrze</span>
+                        <a class="tooltips"><img src="./img/icons/bootstrap.png" alt="Bootstrap" class="skills-list__img">
+                            <span class="skills-list__tooltip">Dobrze</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/git.png" alt="GitHub" class="responsive-img">
-                            <span class="tooltip-text">Średnio</span>
+                        <a class="tooltips"><img src="./img/icons/git.png" alt="GitHub" class="skills-list__img">
+                            <span class="skills-list__tooltip">Średnio</span>
                         </a>
                     </li>
                 </ul>
@@ -108,28 +108,28 @@
                 <h3>#Pracuję korzystając z:</h3>
                 <ul class="skills-list">
                     <li>
-                        <a class="tooltips"><img src="./img/icons/atom.png" alt="Atom" class="responsive-img">
-                            <span class="tooltip-text">GitHub Atom</span>
+                        <a class="tooltips"><img src="./img/icons/atom.png" alt="Atom" class="skills-list__img">
+                            <span class="skills-list__tooltip">GitHub Atom</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/ps.png" alt="Photoshop" class="responsive-img">
-                            <span class="tooltip-text">Photoshop CC</span>
+                        <a class="tooltips"><img src="./img/icons/ps.png" alt="Photoshop" class="skills-list__img">
+                            <span class="skills-list__tooltip">Photoshop CC</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/chrome.png" alt="Google Chrome Dev" class="responsive-img">
-                            <span class="tooltip-text">Chrome Dev</span>
+                        <a class="tooltips"><img src="./img/icons/chrome.png" alt="Google Chrome Dev" class="skills-list__img">
+                            <span class="skills-list__tooltip">Chrome Dev</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/mac.png" alt="MacOS" class="responsive-img">
-                            <span class="tooltip-text">Mac OS</span>
+                        <a class="tooltips"><img src="./img/icons/mac.png" alt="MacOS" class="skills-list__img">
+                            <span class="skills-list__tooltip">Mac OS</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/pc.png" alt="PC" class="responsive-img">
-                            <span class="tooltip-text">PC</span>
+                        <a class="tooltips"><img src="./img/icons/pc.png" alt="PC" class="skills-list__img">
+                            <span class="skills-list__tooltip">PC</span>
                         </a>
                     </li>
                 </ul>
@@ -137,58 +137,58 @@
                 <h3>#Chcę opanować:</h3>
                 <ul class="skills-list">
                     <li>
-                        <a class="tooltips"><img src="./img/icons/js.png" alt="JavaScript" class="responsive-img">
-                            <span class="tooltip-text">JavaScript</span>
+                        <a class="tooltips"><img src="./img/icons/js.png" alt="JavaScript" class="skills-list__img">
+                            <span class="skills-list__tooltip">JavaScript</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/jquery.png" alt="jQuery" class="responsive-img">
-                            <span class="tooltip-text">jQuery</span>
+                        <a class="tooltips"><img src="./img/icons/jquery.png" alt="jQuery" class="skills-list__img">
+                            <span class="skills-list__tooltip">jQuery</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/node.png" alt="Node" class="responsive-img">
-                            <span class="tooltip-text">Node.js</span>
+                        <a class="tooltips"><img src="./img/icons/node.png" alt="Node" class="skills-list__img">
+                            <span class="skills-list__tooltip">Node.js</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/angular.png" alt="Angular" class="responsive-img">
-                            <span class="tooltip-text">Angular</span>
+                        <a class="tooltips"><img src="./img/icons/angular.png" alt="Angular" class="skills-list__img">
+                            <span class="skills-list__tooltip">Angular</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/react.png" alt="React" class="responsive-img">
-                            <span class="tooltip-text">React.js</span>
+                        <a class="tooltips"><img src="./img/icons/react.png" alt="React" class="skills-list__img">
+                            <span class="skills-list__tooltip">React.js</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/bower.png" alt="Bower" class="responsive-img">
-                            <span class="tooltip-text">Bower</span>
+                        <a class="tooltips"><img src="./img/icons/bower.png" alt="Bower" class="skills-list__img">
+                            <span class="skills-list__tooltip">Bower</span>
                         </a>
                     </li>
                     <li>
-                        <a class="tooltips"><img src="./img/icons/gulp.png" alt="Gulp" class="responsive-img">
-                            <span class="tooltip-text">Gulp</span>
+                        <a class="tooltips"><img src="./img/icons/gulp.png" alt="Gulp" class="skills-list__img">
+                            <span class="skills-list__tooltip">Gulp</span>
                         </a>
                     </li>
                 </ul>
             </section>
             <section id="works" class="works">
-                <div class="works-container hidden">
+                <div class="works-container">
                     <h2>#Projekty wykonane</h2>
                     <!-- GALLERY IMAGE DIMENSIONS 700X420 -->
-                    <a href="https://github.com/malikowy/MRR" target="_blank" title="Strona dla firmy MRR" class="gallery rotate"><img src="./img/projects/mrr.png" alt="MRR page view"></a>
-                    <a href="https://github.com/malikowy/portfolio-page" target="_blank" title="Moja pierwsza strona portfolio" class="gallery rotate"><img src="./img/projects/portfolio.png" alt="My first portfolio page"></a>
-                    <a href="#" title="Lorem ipsum" class="gallery rotate"><img src="./img/7.jpg" alt="" /></a>
-                    <a href="#" title="Lorem ipsum" class="gallery rotate"><img src="./img/5.jpg" alt="" /></a>
-                    <a href="#" title="Lorem ipsum" class="gallery rotate"><img src="./img/6.jpg" alt="" /></a>
-                    <a href="#" title="Lorem ipsum" class="gallery rotate"><img src="./img/7.jpg" alt="" /></a>
+                    <a href="https://github.com/malikowy/MRR" target="_blank" title="Strona dla firmy MRR" class="works-container__gallery rotate"><img src="./img/projects/mrr.png" alt="MRR page view"></a>
+                    <a href="https://github.com/malikowy/portfolio-page" target="_blank" title="Moja pierwsza strona portfolio" class="works-container__gallery rotate"><img src="./img/projects/portfolio.png" alt="My first portfolio page"></a>
+                    <a href="#" title="Lorem ipsum" class="works-container__gallery rotate"><img src="./img/7.jpg" alt="" /></a>
+                    <a href="#" title="Lorem ipsum" class="works-container__gallery rotate"><img src="./img/5.jpg" alt="" /></a>
+                    <a href="#" title="Lorem ipsum" class="works-container__gallery rotate"><img src="./img/6.jpg" alt="" /></a>
+                    <a href="#" title="Lorem ipsum" class="works-container__gallery rotate"><img src="./img/7.jpg" alt="" /></a>
                 </div>
             </section>
-            <footer class="footer" id="contact">
+            <footer class="contact" id="contact">
                 <div class="contact-list">
                     <h2>#DANE KONTAKTOWE</h2>
-                    <address class=contact-data>
+                    <address class=contact-list__data>
                             <p>Gabriel Ignatiuk</p>
                             <p>Telefon:
                                 <a href="tel:+48600144708">600144708</a>
@@ -197,7 +197,7 @@
                                 <a class="email" href="mailto:gabriel.ignatiuk@gmail.com">gabriel.ignatiuk@gmail.com</a>
                             </p>
                     </address>
-                    <div class="contact-icons">
+                    <div class="contact-list__icons">
                         <ul>
                             <li>
                                 <a href="https://www.linkedin.com/in/gabrielignatiuk" aria-label="LinkedIn"><i class="fa faborder fa-linkedin-square fa-2x" aria-hidden="true"></i>
@@ -225,8 +225,8 @@
                             </li>
                         </ul>
                     </div>
-                    <p class="copyrights">Portfolio - Gabriel Ignatiuk</p>
-                    <p class="last-update">Ostatnia aktualizacja: grudzień 2016</p>
+                    <p class="contact-list__rights">Portfolio - Gabriel Ignatiuk</p>
+                    <p class="contact-list__update">Ostatnia aktualizacja: grudzień 2016</p>
             </footer>
         </main>
         <!-- SMOOTH SCROLL -->
@@ -251,6 +251,7 @@
 
             }(jQuery));
         </script>
+        <!-- MOBILE MENU UN/COLLAPSE -->
         <script>
             $(document).ready(function() {
                 $('.drawer').drawer();
